added first map

--- a/data-vis-mx.ipynb
+++ b/data-vis-mx.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,56 +18,353 @@
     "import datosgobmx.client as api\n",
     "import numpy as np\n",
     "import pandas as pd\n",
+    "import folium\n",
+    "import json\n",
     "dirpath = os.getcwd()\n",
     "print('dirpath', dirpath)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SHape! (13748, 21)\n",
+      "Shape! (13748, 21)\n",
       "RangeIndex(start=0, stop=13748, step=1)\n",
       "Index(['Año', 'Clave_Ent', 'Entidad', 'Bien jurídico afectado',\n",
       "       'Tipo de delito', 'Subtipo de delito', 'Modalidad', 'Sexo',\n",
       "       'Rango de edad', 'Enero', 'Febrero', 'Marzo', 'Abril', 'Mayo', 'Junio',\n",
       "       'Julio', 'Agosto', 'Septiembre', 'Octubre', 'Noviembre', 'Diciembre'],\n",
-      "      dtype='object')\n",
-      "estados {'Aguascalientes': 0.0, 'Baja California': 5.0, 'Baja California Sur': 0.0, 'Campeche': 0.0, 'Coahuila de Zaragoza': 0.0, 'Colima': 0.0, 'Chiapas': 4.0, 'Chihuahua': 0.0, 'Ciudad de México': 55.0, 'Durango': 8.0, 'Guanajuato': 0.0, 'Guerrero': 0.0, 'Hidalgo': 0.0, 'Jalisco': 0.0, 'México': 639.0, 'Michoacán de Ocampo': 6.0, 'Morelos': 2.0, 'Nayarit': 0.0, 'Nuevo León': 0.0, 'Oaxaca': 93.0, 'Puebla': 115.0, 'Querétaro': 55.0, 'Quintana Roo': 6.0, 'San Luis Potosí': 0.0, 'Sinaloa': 65.0, 'Sonora': 0.0, 'Tabasco': 7.0, 'Tamaulipas': nan, 'Tlaxcala': 0.0, 'Veracruz de Ignacio de la Llave': 4.0, 'Yucatán': 343.0, 'Zacatecas': 0.0}\n"
+      "      dtype='object')\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Estado</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Homicidios</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>Aguascalientes</td>\n",
+       "      <td>Aguascalientes</td>\n",
+       "      <td>7110.0</td>\n",
+       "      <td>498.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Baja California</td>\n",
+       "      <td>Baja California</td>\n",
+       "      <td>36646.0</td>\n",
+       "      <td>2938.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Baja California Sur</td>\n",
+       "      <td>Baja California Sur</td>\n",
+       "      <td>4579.0</td>\n",
+       "      <td>553.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Campeche</td>\n",
+       "      <td>Campeche</td>\n",
+       "      <td>967.0</td>\n",
+       "      <td>325.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Coahuila de Zaragoza</td>\n",
+       "      <td>Coahuila de Zaragoza</td>\n",
+       "      <td>13779.0</td>\n",
+       "      <td>1156.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Colima</td>\n",
+       "      <td>Colima</td>\n",
+       "      <td>1636.0</td>\n",
+       "      <td>942.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Chiapas</td>\n",
+       "      <td>Chiapas</td>\n",
+       "      <td>7657.0</td>\n",
+       "      <td>3121.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Chihuahua</td>\n",
+       "      <td>Chihuahua</td>\n",
+       "      <td>18830.0</td>\n",
+       "      <td>3383.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Ciudad de México</td>\n",
+       "      <td>Ciudad de México</td>\n",
+       "      <td>29487.0</td>\n",
+       "      <td>3314.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Durango</td>\n",
+       "      <td>Durango</td>\n",
+       "      <td>11075.0</td>\n",
+       "      <td>1018.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Guanajuato</td>\n",
+       "      <td>Guanajuato</td>\n",
+       "      <td>30093.0</td>\n",
+       "      <td>5983.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Guerrero</td>\n",
+       "      <td>Guerrero</td>\n",
+       "      <td>15748.0</td>\n",
+       "      <td>5565.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Hidalgo</td>\n",
+       "      <td>Hidalgo</td>\n",
+       "      <td>12471.0</td>\n",
+       "      <td>1400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Jalisco</td>\n",
+       "      <td>Jalisco</td>\n",
+       "      <td>33694.0</td>\n",
+       "      <td>4254.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>México</td>\n",
+       "      <td>México</td>\n",
+       "      <td>96709.0</td>\n",
+       "      <td>6383.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Michoacán de Ocampo</td>\n",
+       "      <td>Michoacán de Ocampo</td>\n",
+       "      <td>16416.0</td>\n",
+       "      <td>5089.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Morelos</td>\n",
+       "      <td>Morelos</td>\n",
+       "      <td>13645.0</td>\n",
+       "      <td>1789.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Nayarit</td>\n",
+       "      <td>Nayarit</td>\n",
+       "      <td>1679.0</td>\n",
+       "      <td>263.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Nuevo León</td>\n",
+       "      <td>Nuevo León</td>\n",
+       "      <td>34331.0</td>\n",
+       "      <td>2671.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Oaxaca</td>\n",
+       "      <td>Oaxaca</td>\n",
+       "      <td>9213.0</td>\n",
+       "      <td>2199.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Puebla</td>\n",
+       "      <td>Puebla</td>\n",
+       "      <td>22367.0</td>\n",
+       "      <td>2761.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Querétaro</td>\n",
+       "      <td>Querétaro</td>\n",
+       "      <td>13539.0</td>\n",
+       "      <td>956.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Quintana Roo</td>\n",
+       "      <td>Quintana Roo</td>\n",
+       "      <td>7381.0</td>\n",
+       "      <td>853.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>San Luis Potosí</td>\n",
+       "      <td>San Luis Potosí</td>\n",
+       "      <td>9157.0</td>\n",
+       "      <td>963.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Sinaloa</td>\n",
+       "      <td>Sinaloa</td>\n",
+       "      <td>13274.0</td>\n",
+       "      <td>3369.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Sonora</td>\n",
+       "      <td>Sonora</td>\n",
+       "      <td>11945.0</td>\n",
+       "      <td>2251.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Tabasco</td>\n",
+       "      <td>Tabasco</td>\n",
+       "      <td>16892.0</td>\n",
+       "      <td>1482.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Tamaulipas</td>\n",
+       "      <td>Tamaulipas</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3513.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Tlaxcala</td>\n",
+       "      <td>Tlaxcala</td>\n",
+       "      <td>1418.0</td>\n",
+       "      <td>338.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Veracruz de Ignacio de la Llave</td>\n",
+       "      <td>Veracruz de Ignacio de la Llave</td>\n",
+       "      <td>7065.0</td>\n",
+       "      <td>1083.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Yucatán</td>\n",
+       "      <td>Yucatán</td>\n",
+       "      <td>4865.0</td>\n",
+       "      <td>104.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>Zacatecas</td>\n",
+       "      <td>Zacatecas</td>\n",
+       "      <td>3120.0</td>\n",
+       "      <td>450.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                          Estado    Total  \\\n",
+       "Aguascalientes                                    Aguascalientes   7110.0   \n",
+       "Baja California                                  Baja California  36646.0   \n",
+       "Baja California Sur                          Baja California Sur   4579.0   \n",
+       "Campeche                                                Campeche    967.0   \n",
+       "Coahuila de Zaragoza                        Coahuila de Zaragoza  13779.0   \n",
+       "Colima                                                    Colima   1636.0   \n",
+       "Chiapas                                                  Chiapas   7657.0   \n",
+       "Chihuahua                                              Chihuahua  18830.0   \n",
+       "Ciudad de México                                Ciudad de México  29487.0   \n",
+       "Durango                                                  Durango  11075.0   \n",
+       "Guanajuato                                            Guanajuato  30093.0   \n",
+       "Guerrero                                                Guerrero  15748.0   \n",
+       "Hidalgo                                                  Hidalgo  12471.0   \n",
+       "Jalisco                                                  Jalisco  33694.0   \n",
+       "México                                                    México  96709.0   \n",
+       "Michoacán de Ocampo                          Michoacán de Ocampo  16416.0   \n",
+       "Morelos                                                  Morelos  13645.0   \n",
+       "Nayarit                                                  Nayarit   1679.0   \n",
+       "Nuevo León                                            Nuevo León  34331.0   \n",
+       "Oaxaca                                                    Oaxaca   9213.0   \n",
+       "Puebla                                                    Puebla  22367.0   \n",
+       "Querétaro                                              Querétaro  13539.0   \n",
+       "Quintana Roo                                        Quintana Roo   7381.0   \n",
+       "San Luis Potosí                                  San Luis Potosí   9157.0   \n",
+       "Sinaloa                                                  Sinaloa  13274.0   \n",
+       "Sonora                                                    Sonora  11945.0   \n",
+       "Tabasco                                                  Tabasco  16892.0   \n",
+       "Tamaulipas                                            Tamaulipas      NaN   \n",
+       "Tlaxcala                                                Tlaxcala   1418.0   \n",
+       "Veracruz de Ignacio de la Llave  Veracruz de Ignacio de la Llave   7065.0   \n",
+       "Yucatán                                                  Yucatán   4865.0   \n",
+       "Zacatecas                                              Zacatecas   3120.0   \n",
+       "\n",
+       "                                 Homicidios  \n",
+       "Aguascalientes                        498.0  \n",
+       "Baja California                      2938.0  \n",
+       "Baja California Sur                   553.0  \n",
+       "Campeche                              325.0  \n",
+       "Coahuila de Zaragoza                 1156.0  \n",
+       "Colima                                942.0  \n",
+       "Chiapas                              3121.0  \n",
+       "Chihuahua                            3383.0  \n",
+       "Ciudad de México                     3314.0  \n",
+       "Durango                              1018.0  \n",
+       "Guanajuato                           5983.0  \n",
+       "Guerrero                             5565.0  \n",
+       "Hidalgo                              1400.0  \n",
+       "Jalisco                              4254.0  \n",
+       "México                               6383.0  \n",
+       "Michoacán de Ocampo                  5089.0  \n",
+       "Morelos                              1789.0  \n",
+       "Nayarit                               263.0  \n",
+       "Nuevo León                           2671.0  \n",
+       "Oaxaca                               2199.0  \n",
+       "Puebla                               2761.0  \n",
+       "Querétaro                             956.0  \n",
+       "Quintana Roo                          853.0  \n",
+       "San Luis Potosí                       963.0  \n",
+       "Sinaloa                              3369.0  \n",
+       "Sonora                               2251.0  \n",
+       "Tabasco                              1482.0  \n",
+       "Tamaulipas                           3513.0  \n",
+       "Tlaxcala                              338.0  \n",
+       "Veracruz de Ignacio de la Llave      1083.0  \n",
+       "Yucatán                               104.0  \n",
+       "Zacatecas                             450.0  "
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
     "data = pd.read_csv('delitos.csv', encoding=\"latin_1\")\n",
     "\n",
-    "print(\"SHape!\", data.shape)\n",
-    "# print(type(data))\n",
-    "# print(data.head())\n",
-    "# print(data.index('homicidios'))\n",
-    "# count = 0\n",
-    "# data.head()\n",
-    "\n",
+    "print(\"Shape!\", data.shape)\n",
     "print(data.index)\n",
     "print(data.keys())\n",
     "def total_abs(data):\n",
-    "    count = 0\n",
     "    d = {} # dictionary!\n",
     "    for index, series in data.iterrows():\n",
-    "        d[series['Entidad']] = sumMonths(series)\n",
+    "        if(series['Entidad'] in d):\n",
+    "            curr = d[series['Entidad']] # the tuple curr[0] == total, curr[1] == homicidios totales\n",
+    "            d[series['Entidad']] = (curr[0], curr[1] + sumMonths(series), curr[2] + checkHomicide(series))\n",
+    "#             d[series['Entidad']] += sumMonths(series)\n",
+    "        else:\n",
+    "            d[series['Entidad']] = (series['Entidad'], sumMonths(series), checkHomicide(series))\n",
     "        \n",
-    "#         print('index', series['Entidad'])\n",
-    "        count += 1\n",
-    "        \n",
-    "#         print('state crimes:', )\n",
-    "        \n",
-    "#         if (count > 200):\n",
-    "#             break\n",
-    "    print('estados', d)\n",
+    "#     print('estados', d)\n",
+    "    return d\n",
+    "\n",
+    "def checkHomicide(series):\n",
+    "    if(series['Tipo de delito'] == 'Homicidio'):\n",
+    "        return sumMonths(series)\n",
+    "    else:\n",
+    "        return 0\n",
+    "\n",
     "# get the total of all 12 months, take in a 'series'\n",
     "def sumMonths(s):\n",
     "#     print('SERIESSSSS', s[])\n",
@@ -75,12 +372,55 @@
     "    for i in range(9, 21):\n",
     "        result += s[i]\n",
     "    return result\n",
-    "    \n",
-    "            \n",
-    "            \n",
-    "total_abs(data)\n",
     "\n",
-    "        \n"
+    "d = total_abs(data)\n",
+    "state_results = pd.DataFrame.from_dict(d, orient='index', columns=['Estado', 'Total', 'Homicidios'])\n",
+    "state_results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# mapping data\n",
+    "centro_lat, centro_lon = 22.396092, -101.731430\n",
+    "folium_map = folium.Map(location=[centro_lat, centro_lon], zoom_start=5, tiles='cartodb positron')\n",
+    "fg = folium.FeatureGroup(name='Estados Mexicanos')\n",
+    "fg.add_child(folium.GeoJson(open(\"statesGEOJSON.json\",encoding = \"utf-8-sig\").read()))\n",
+    "# folium_map\n",
+    "folium_map.add_child(fg)\n",
+    "folium.LayerControl().add_to(folium_map)\n",
+    "# save it, (won't render here for some reason...)\n",
+    "folium_map.save('test.html')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# using choropleth\n",
+    "centro_lat, centro_lon = 22.396092, -101.731430\n",
+    "m = folium.Map(location=[centro_lat, centro_lon], zoom_start=5, tiles='cartodb positron')\n",
+    "folium.Choropleth(\n",
+    "    geo_data=open(\"statesGEOJSON.json\",encoding = \"utf-8-sig\").read(),\n",
+    "    name='Mexico',\n",
+    "#     bins=250,\n",
+    "    highlight=True,\n",
+    "    data=state_results,\n",
+    "    columns=['Estado', 'Homicidios'],\n",
+    "    key_on='feature.properties.NOM_ENT',\n",
+    "    fill_color='RdPu',\n",
+    "    nan_fill_color='Gray',\n",
+    "    fill_opacity=0.7,\n",
+    "    line_opacity=0.2,\n",
+    "    legend_name='Estados'\n",
+    ").add_to(m)\n",
+    "\n",
+    "m.save('test.html')"
    ]
   },
   {
@@ -88,9 +428,7 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "d = {} # dictionary!"
-   ]
+   "source": []
   }
  ],
  "metadata": {
