--- a/data-vis-mx.ipynb
+++ b/data-vis-mx.ipynb
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,19 +41,19 @@
     "        \n",
     "    def checkYear(self, series, year):\n",
     "        if(series['Año'] == year):\n",
-    "            return sumDate(series)\n",
+    "            return self.sumDate(series)\n",
     "        else:\n",
     "            return 0\n",
     "\n",
     "    def checkTypeOfCrime(self, series, crime):\n",
     "        if(series['Tipo de delito'] == crime):\n",
-    "            return sumDate(series)\n",
+    "            return self.sumDate(series)\n",
     "        else:\n",
     "            return 0\n",
     "    \n",
     "    def checkGender(self, series, crime, gender):\n",
     "        if(series['Tipo de delito'] == crime and series['Sexo'] == gender):\n",
-    "            return sumDate(series)\n",
+    "            return self.sumDate(series)\n",
     "        else:\n",
     "            return 0\n",
     "    \n",
@@ -73,21 +73,404 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'sumDate' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-55-a348d74feaf8>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     26\u001b[0m     \u001b[0;32mreturn\u001b[0m \u001b[0mstate_results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     27\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 28\u001b[0;31m \u001b[0mtotal_abs\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mdata\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Homicidio\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-55-a348d74feaf8>\u001b[0m in \u001b[0;36mtotal_abs\u001b[0;34m(data, crimeType, year, startMonthIdx, endMonthIdx)\u001b[0m\n\u001b[1;32m     16\u001b[0m             d[series['Entidad']] = (series['Entidad'], \n\u001b[1;32m     17\u001b[0m                                     \u001b[0mquery\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msumDate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 18\u001b[0;31m                                     \u001b[0mquery\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheckTypeOfCrime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseries\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcrimeType\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     19\u001b[0m                                     \u001b[0mquery\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheckGender\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseries\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcrimeType\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Hombre\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m                                     \u001b[0mquery\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcheckGender\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseries\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcrimeType\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"Mujer\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m<ipython-input-54-8da1fdbb5584>\u001b[0m in \u001b[0;36mcheckTypeOfCrime\u001b[0;34m(self, series, crime)\u001b[0m\n\u001b[1;32m     17\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mcheckTypeOfCrime\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mseries\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcrime\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     18\u001b[0m         \u001b[0;32mif\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseries\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'Tipo de delito'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m==\u001b[0m \u001b[0mcrime\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 19\u001b[0;31m             \u001b[0;32mreturn\u001b[0m \u001b[0msumDate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mseries\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     20\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     21\u001b[0m             \u001b[0;32mreturn\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'sumDate' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Estado</th>\n",
+       "      <th>Total</th>\n",
+       "      <th>Numero de Homicidios</th>\n",
+       "      <th>Hombre</th>\n",
+       "      <th>Mujer</th>\n",
+       "      <th>No identificado</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <td>1</td>\n",
+       "      <td>Aguascalientes</td>\n",
+       "      <td>7110.0</td>\n",
+       "      <td>498.0</td>\n",
+       "      <td>383.0</td>\n",
+       "      <td>114.0</td>\n",
+       "      <td>1.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>2</td>\n",
+       "      <td>Baja California</td>\n",
+       "      <td>36646.0</td>\n",
+       "      <td>2938.0</td>\n",
+       "      <td>2500.0</td>\n",
+       "      <td>396.0</td>\n",
+       "      <td>42.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>3</td>\n",
+       "      <td>Baja California Sur</td>\n",
+       "      <td>4579.0</td>\n",
+       "      <td>553.0</td>\n",
+       "      <td>480.0</td>\n",
+       "      <td>60.0</td>\n",
+       "      <td>13.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>4</td>\n",
+       "      <td>Campeche</td>\n",
+       "      <td>967.0</td>\n",
+       "      <td>325.0</td>\n",
+       "      <td>264.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>5</td>\n",
+       "      <td>Coahuila de Zaragoza</td>\n",
+       "      <td>13779.0</td>\n",
+       "      <td>1156.0</td>\n",
+       "      <td>925.0</td>\n",
+       "      <td>226.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>6</td>\n",
+       "      <td>Colima</td>\n",
+       "      <td>1636.0</td>\n",
+       "      <td>942.0</td>\n",
+       "      <td>857.0</td>\n",
+       "      <td>80.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>7</td>\n",
+       "      <td>Chiapas</td>\n",
+       "      <td>7657.0</td>\n",
+       "      <td>3121.0</td>\n",
+       "      <td>2695.0</td>\n",
+       "      <td>421.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>8</td>\n",
+       "      <td>Chihuahua</td>\n",
+       "      <td>18830.0</td>\n",
+       "      <td>3383.0</td>\n",
+       "      <td>2928.0</td>\n",
+       "      <td>445.0</td>\n",
+       "      <td>10.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>9</td>\n",
+       "      <td>Ciudad de México</td>\n",
+       "      <td>29487.0</td>\n",
+       "      <td>3314.0</td>\n",
+       "      <td>2843.0</td>\n",
+       "      <td>449.0</td>\n",
+       "      <td>22.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>10</td>\n",
+       "      <td>Durango</td>\n",
+       "      <td>11075.0</td>\n",
+       "      <td>1018.0</td>\n",
+       "      <td>894.0</td>\n",
+       "      <td>124.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>11</td>\n",
+       "      <td>Guanajuato</td>\n",
+       "      <td>30093.0</td>\n",
+       "      <td>5983.0</td>\n",
+       "      <td>4675.0</td>\n",
+       "      <td>1023.0</td>\n",
+       "      <td>285.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>12</td>\n",
+       "      <td>Guerrero</td>\n",
+       "      <td>15748.0</td>\n",
+       "      <td>5565.0</td>\n",
+       "      <td>3982.0</td>\n",
+       "      <td>656.0</td>\n",
+       "      <td>927.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>13</td>\n",
+       "      <td>Hidalgo</td>\n",
+       "      <td>12471.0</td>\n",
+       "      <td>1400.0</td>\n",
+       "      <td>1108.0</td>\n",
+       "      <td>271.0</td>\n",
+       "      <td>21.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>14</td>\n",
+       "      <td>Jalisco</td>\n",
+       "      <td>33694.0</td>\n",
+       "      <td>4254.0</td>\n",
+       "      <td>3605.0</td>\n",
+       "      <td>532.0</td>\n",
+       "      <td>117.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>15</td>\n",
+       "      <td>México</td>\n",
+       "      <td>96709.0</td>\n",
+       "      <td>6383.0</td>\n",
+       "      <td>4970.0</td>\n",
+       "      <td>954.0</td>\n",
+       "      <td>459.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>16</td>\n",
+       "      <td>Michoacán de Ocampo</td>\n",
+       "      <td>16416.0</td>\n",
+       "      <td>5089.0</td>\n",
+       "      <td>4280.0</td>\n",
+       "      <td>665.0</td>\n",
+       "      <td>144.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>17</td>\n",
+       "      <td>Morelos</td>\n",
+       "      <td>13645.0</td>\n",
+       "      <td>1789.0</td>\n",
+       "      <td>1495.0</td>\n",
+       "      <td>230.0</td>\n",
+       "      <td>64.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>18</td>\n",
+       "      <td>Nayarit</td>\n",
+       "      <td>1679.0</td>\n",
+       "      <td>263.0</td>\n",
+       "      <td>194.0</td>\n",
+       "      <td>67.0</td>\n",
+       "      <td>2.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>19</td>\n",
+       "      <td>Nuevo León</td>\n",
+       "      <td>34331.0</td>\n",
+       "      <td>2671.0</td>\n",
+       "      <td>2129.0</td>\n",
+       "      <td>542.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>20</td>\n",
+       "      <td>Oaxaca</td>\n",
+       "      <td>9213.0</td>\n",
+       "      <td>2199.0</td>\n",
+       "      <td>1876.0</td>\n",
+       "      <td>230.0</td>\n",
+       "      <td>93.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>21</td>\n",
+       "      <td>Puebla</td>\n",
+       "      <td>22367.0</td>\n",
+       "      <td>2761.0</td>\n",
+       "      <td>2247.0</td>\n",
+       "      <td>491.0</td>\n",
+       "      <td>23.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>22</td>\n",
+       "      <td>Querétaro</td>\n",
+       "      <td>13539.0</td>\n",
+       "      <td>956.0</td>\n",
+       "      <td>781.0</td>\n",
+       "      <td>158.0</td>\n",
+       "      <td>17.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>23</td>\n",
+       "      <td>Quintana Roo</td>\n",
+       "      <td>7381.0</td>\n",
+       "      <td>853.0</td>\n",
+       "      <td>508.0</td>\n",
+       "      <td>196.0</td>\n",
+       "      <td>149.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>24</td>\n",
+       "      <td>San Luis Potosí</td>\n",
+       "      <td>9157.0</td>\n",
+       "      <td>963.0</td>\n",
+       "      <td>701.0</td>\n",
+       "      <td>127.0</td>\n",
+       "      <td>135.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>25</td>\n",
+       "      <td>Sinaloa</td>\n",
+       "      <td>13274.0</td>\n",
+       "      <td>3369.0</td>\n",
+       "      <td>3034.0</td>\n",
+       "      <td>321.0</td>\n",
+       "      <td>14.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>26</td>\n",
+       "      <td>Sonora</td>\n",
+       "      <td>11945.0</td>\n",
+       "      <td>2251.0</td>\n",
+       "      <td>1779.0</td>\n",
+       "      <td>284.0</td>\n",
+       "      <td>188.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>27</td>\n",
+       "      <td>Tabasco</td>\n",
+       "      <td>16892.0</td>\n",
+       "      <td>1482.0</td>\n",
+       "      <td>1183.0</td>\n",
+       "      <td>146.0</td>\n",
+       "      <td>153.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>28</td>\n",
+       "      <td>Tamaulipas</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>3513.0</td>\n",
+       "      <td>2923.0</td>\n",
+       "      <td>533.0</td>\n",
+       "      <td>57.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>29</td>\n",
+       "      <td>Tlaxcala</td>\n",
+       "      <td>1418.0</td>\n",
+       "      <td>338.0</td>\n",
+       "      <td>235.0</td>\n",
+       "      <td>56.0</td>\n",
+       "      <td>47.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>30</td>\n",
+       "      <td>Veracruz de Ignacio de la Llave</td>\n",
+       "      <td>7065.0</td>\n",
+       "      <td>1083.0</td>\n",
+       "      <td>861.0</td>\n",
+       "      <td>123.0</td>\n",
+       "      <td>99.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>31</td>\n",
+       "      <td>Yucatán</td>\n",
+       "      <td>4865.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>89.0</td>\n",
+       "      <td>10.0</td>\n",
+       "      <td>5.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>32</td>\n",
+       "      <td>Zacatecas</td>\n",
+       "      <td>3120.0</td>\n",
+       "      <td>450.0</td>\n",
+       "      <td>398.0</td>\n",
+       "      <td>52.0</td>\n",
+       "      <td>0.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                             Estado    Total  Numero de Homicidios  Hombre  \\\n",
+       "1                    Aguascalientes   7110.0                 498.0   383.0   \n",
+       "2                   Baja California  36646.0                2938.0  2500.0   \n",
+       "3               Baja California Sur   4579.0                 553.0   480.0   \n",
+       "4                          Campeche    967.0                 325.0   264.0   \n",
+       "5              Coahuila de Zaragoza  13779.0                1156.0   925.0   \n",
+       "6                            Colima   1636.0                 942.0   857.0   \n",
+       "7                           Chiapas   7657.0                3121.0  2695.0   \n",
+       "8                         Chihuahua  18830.0                3383.0  2928.0   \n",
+       "9                  Ciudad de México  29487.0                3314.0  2843.0   \n",
+       "10                          Durango  11075.0                1018.0   894.0   \n",
+       "11                       Guanajuato  30093.0                5983.0  4675.0   \n",
+       "12                         Guerrero  15748.0                5565.0  3982.0   \n",
+       "13                          Hidalgo  12471.0                1400.0  1108.0   \n",
+       "14                          Jalisco  33694.0                4254.0  3605.0   \n",
+       "15                           México  96709.0                6383.0  4970.0   \n",
+       "16              Michoacán de Ocampo  16416.0                5089.0  4280.0   \n",
+       "17                          Morelos  13645.0                1789.0  1495.0   \n",
+       "18                          Nayarit   1679.0                 263.0   194.0   \n",
+       "19                       Nuevo León  34331.0                2671.0  2129.0   \n",
+       "20                           Oaxaca   9213.0                2199.0  1876.0   \n",
+       "21                           Puebla  22367.0                2761.0  2247.0   \n",
+       "22                        Querétaro  13539.0                 956.0   781.0   \n",
+       "23                     Quintana Roo   7381.0                 853.0   508.0   \n",
+       "24                  San Luis Potosí   9157.0                 963.0   701.0   \n",
+       "25                          Sinaloa  13274.0                3369.0  3034.0   \n",
+       "26                           Sonora  11945.0                2251.0  1779.0   \n",
+       "27                          Tabasco  16892.0                1482.0  1183.0   \n",
+       "28                       Tamaulipas      NaN                3513.0  2923.0   \n",
+       "29                         Tlaxcala   1418.0                 338.0   235.0   \n",
+       "30  Veracruz de Ignacio de la Llave   7065.0                1083.0   861.0   \n",
+       "31                          Yucatán   4865.0                 104.0    89.0   \n",
+       "32                        Zacatecas   3120.0                 450.0   398.0   \n",
+       "\n",
+       "     Mujer  No identificado  \n",
+       "1    114.0              1.0  \n",
+       "2    396.0             42.0  \n",
+       "3     60.0             13.0  \n",
+       "4     56.0              5.0  \n",
+       "5    226.0              5.0  \n",
+       "6     80.0              5.0  \n",
+       "7    421.0              5.0  \n",
+       "8    445.0             10.0  \n",
+       "9    449.0             22.0  \n",
+       "10   124.0              0.0  \n",
+       "11  1023.0            285.0  \n",
+       "12   656.0            927.0  \n",
+       "13   271.0             21.0  \n",
+       "14   532.0            117.0  \n",
+       "15   954.0            459.0  \n",
+       "16   665.0            144.0  \n",
+       "17   230.0             64.0  \n",
+       "18    67.0              2.0  \n",
+       "19   542.0              0.0  \n",
+       "20   230.0             93.0  \n",
+       "21   491.0             23.0  \n",
+       "22   158.0             17.0  \n",
+       "23   196.0            149.0  \n",
+       "24   127.0            135.0  \n",
+       "25   321.0             14.0  \n",
+       "26   284.0            188.0  \n",
+       "27   146.0            153.0  \n",
+       "28   533.0             57.0  \n",
+       "29    56.0             47.0  \n",
+       "30   123.0             99.0  \n",
+       "31    10.0              5.0  \n",
+       "32    52.0              0.0  "
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
